Restore Jackson override and Java 21 JVM settings
Re-add dependencyOverrides for jackson-module-scala 2.17.0 to fix the
version conflict with jackson-databind, Test/fork and --add-opens flags
for Java 21 module system compatibility with Kryo.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>