@@ -88,6 +88,17 @@ val root: Project = Project(
     "com.spotify" %% "magnolify-cats" % magnolifyVersion,
     "com.spotify" %% "magnolify-guava" % magnolifyVersion
   )
+).settings(
+  dependencyOverrides += "com.fasterxml.jackson.module" %% "jackson-module-scala" % "2.17.0",
+  Test / fork := true,
+  Test / javaOptions ++= Seq(
+    "--add-opens", "java.base/java.util=ALL-UNNAMED",
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+    "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens", "java.base/java.io=ALL-UNNAMED",
+    "--add-opens", "java.base/java.nio=ALL-UNNAMED"
+  )
 ).enablePlugins(JmhPlugin)
 
 def getAllKoans(classLoader: ClassLoader, tests: Seq[TestDefinition]): Seq[(String, Boolean)] = {
